# pymedm

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  codecov.yml  install_cuda_reqs.sh  pyproject.toml  run_tests.sh
.ci/: py311_pymedm_latest.yaml  py311_pymedm_latest.yml  py311_pymedm_min.yaml  py311_pymedm_min.yml  py311_pymedm_oldest.yaml  py312_pymedm_dev.yaml  py312_pymedm_dev.yml  py312_pymedm_latest.yml  py313_pymedm_latest.yaml  py314_pymedm_dev.yaml  py314_pymedm_latest.yaml
.github/workflows/: continuous_integration.yml  release_to_pypi.yml
data/: toy_constraints_bg.csv  toy_constraints_ind.csv
notebooks/: knox.ipynb  knox_multi_puma.ipynb  knox_w_replicates.ipynb  toy_example.ipynb
pymedm/: __init__.py  batch.py  diagnostics.py  pmedm.py  puma.py
pymedm/tests/: conftest.py  test_processor.py  test_pymedm_multi_puma.py  test_pymedm_synth.py
